# ABPMHemodynamicCoupling

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  generate_presentation.py  pyproject.toml  requirements-thesis.txt  requirements.txt  run_pipeline.py  Доклад.docx
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
analysis/: README.md
analysis/hemodynamic_reactivity/: analysis.ipynb  data_inventory.json  deck.md  findings.json  framing.md  methodology.md  profile.md  report.md  storyboard.md  validation.md
analysis/thesis/: __init__.py  thesis_stats.py
data/: README.md  aggregated_data.csv  aggregated_data.xlsx  aggregated_data_clf.xlsx  monitoring_data.csv  monitoring_data.xlsx
disabled_pages/: stress_load_simulator.py
docs/: REPOSITORY_LAYOUT.md
pages/: 1_stress_load_simulator.py
results/: cross_condition_analysis.txt  pairwise_tests.txt  per_subject_metrics.csv  results_summary.txt  sensitivity_screening_thresholds.csv  sensitivity_summary.txt  table1_final.csv
scripts/: compute_ols_comparison.py  extract_fig1_data.py  fig1_ieee.py  generate_article_figures.py  generate_presentation.py  generate_presentation_figures.py
src/: __init__.py  config.py  data_processing.py  feature_engineering.py  modeling.py  simulator.py  stats_analysis.py  visualization.py  web_pipeline.py
src/abpm_analysis/: __init__.py  config.py  data_processing.py  feature_engineering.py  modeling.py  models.py  statistics.py  visualization.py
src/abpm_hemodynamic_coupling/: __init__.py  config.py  data_processing.py  feature_engineering.py  modeling.py  models.py  stats_analysis.py  utils.py  visualization.py  (+1 more)
tests/: test_brandon_summary.py  test_data_processing.py  test_feature_engineering.py  test_imports.py  test_modeling.py  test_web_pipeline.py
(+22 files in other folders)
